<resources>
    <string name="app_name">RealEstateManagerP9</string>
    <string name="type_logement">Type</string>
    <string name="type_price">Price</string>
    <string name="type_city">City</string>
    <string name="type_description">Description</string>
    <string name="type_roomNumbers">RoomNumbers</string>
    <string name="type_surface">Surface</string>
    <string name="type_bathroomNumbers">BathroomNumbers</string>
    <string name="type_bedroomNumbers">BedroomNumbers</string>
    <string name="type_location">Location</string>
    <string name="btn_add_logement">Add Logement</string>
    <string name="media">Media</string>
    <string name="description">Description</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>