<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="12dp"
    android:paddingEnd="16dp">


    <EditText
        android:id="@+id/txt_logement_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_logement"
        android:importantForAutofill="no"
        android:inputType="textAutoComplete"
        />
    <EditText
        android:id="@+id/txt_logement_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_logement"
        android:importantForAutofill="no"
        android:inputType="textAutoComplete"
        />
    <EditText
        android:id="@+id/txt_logement_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_description"
        android:importantForAutofill="no"
        android:inputType="textAutoComplete"
        /> <EditText
        android:id="@+id/txt_logement_roomnubers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_roomNumbers"
        android:importantForAutofill="no"
        android:inputType="textAutoComplete"
        /> <EditText
        android:id="@+id/txt_logement_surface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_surface"
        android:importantForAutofill="no"
        android:inputType="number"
        /> <EditText
        android:id="@+id/txt_logement_bathroomNumbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_bathroomNumbers"
        android:importantForAutofill="no"
        android:inputType="number"
        /> <EditText
        android:id="@+id/txt_logement_bedroomNumbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_bedroomNumbers"
        android:importantForAutofill="no"
        android:inputType="number"
        /> <EditText
        android:id="@+id/txt_logement_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_location"
        android:importantForAutofill="no"
        android:inputType="textAutoComplete"
        />

</LinearLayout>